[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=1]
[ext_resource path="res://scene/gui/SetColorDialog.gd" type="Script" id=2]

[node name="SetColorDialog" type="ConfirmationDialog"]
margin_right = 306.0
margin_bottom = 142.0
rect_min_size = Vector2( 310, 150 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Set Sample Colors"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0

[node name="MainVbox" type="VBoxContainer" parent="MainMargins"]
margin_right = 294.0
margin_bottom = 99.0

[node name="StartColorHbox" type="HBoxContainer" parent="MainMargins/MainVbox"]
margin_right = 294.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="MainMargins/MainVbox/StartColorHbox"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 24.0
rect_min_size = Vector2( 165, 0 )
text = "Start Ramp Color:"
align = 2

[node name="StartColorPicker" type="ColorPickerButton" parent="MainMargins/MainVbox/StartColorHbox"]
margin_left = 169.0
margin_right = 294.0
margin_bottom = 27.0
size_flags_horizontal = 3
color = Color( 0, 0.788235, 1, 1 )

[node name="EndColorHbox" type="HBoxContainer" parent="MainMargins/MainVbox"]
margin_top = 31.0
margin_right = 294.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="MainMargins/MainVbox/EndColorHbox"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 24.0
rect_min_size = Vector2( 165, 0 )
text = "End Ramp Color:"
align = 2

[node name="EndColorPicker" type="ColorPickerButton" parent="MainMargins/MainVbox/EndColorHbox"]
margin_left = 169.0
margin_right = 294.0
margin_bottom = 27.0
size_flags_horizontal = 3
color = Color( 0, 0.407333, 0.52, 1 )

[node name="VisibleOnlyCheckbox" type="CheckBox" parent="MainMargins/MainVbox"]
margin_top = 62.0
margin_right = 294.0
margin_bottom = 91.0
pressed = true
text = "Change Visible Samples Only"
